# circuitcount

./: Cargo.toml  README.md  refs.bib  results.csv
artifacts/: large_sat.proof.json  large_unsat.proof.json  sat.proof.json  unsat.proof.json
datasets/sample/aag/: inst_0000.aag  inst_0003.aag  inst_0004.aag  inst_0007.aag  inst_0008.aag  inst_0009.aag  inst_0010.aag  inst_0011.aag  inst_0012.aag  inst_0013.aag  inst_0014.aag  inst_0015.aag  inst_0016.aag  inst_0017.aag  inst_0018.aag  inst_0019.aag  inst_0020.aag  inst_0021.aag  inst_0022.aag  inst_0023.aag  inst_0024.aag  inst_0025.aag  inst_0026.aag  inst_0027.aag  inst_0028.aag  inst_0029.aag  inst_0030.aag  inst_0031.aag  inst_0032.aag  inst_0033.aag  inst_0034.aag  inst_0035.aag  inst_0036.aag  inst_0037.aag  inst_0038.aag  inst_0039.aag  inst_0040.aag  (+79 more)
docs/fig/: report.md
examples/: batch_manifest.json  large_sat.cnf  large_sat.wtns  large_unsat.cnf  large_unsat.wtns  sat.cnf  unsat.cnf
results/: dpll.csv  results.csv  varisat.csv
scripts/: gen_sample_dataset.py  plot_results.py
src/: cnf.rs  field.rs  lib.rs  main.rs  merkle.rs  ntt.rs  protocol.rs  rng.rs
src/bench/: mod.rs
src/circuit/: aig.rs  aiger.rs  bench.rs  mod.rs
src/cnf/: cnf.rs  dimacs.rs  mod.rs  tseitin.rs
src/count/: bounded.rs  hash_count.rs  mod.rs
src/sat/: dpll.rs
src/solver/: dpll_backend.rs  mod.rs  scope.rs  varisat.rs
src/xor/: encode.rs  hash.rs
tests/: aiger_parse.rs  bench_csv.rs  bench_parse.rs  bounded_count.rs  coi.rs  hash_count_small.rs  incremental_scopes.rs  simplify.rs  tseitin_equiv.rs  xor_encode.rs
(+844 files in other folders)
