[package]
name = "circuitcount"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
indexmap = "2"
rand = "0.9"
rand_chacha = "0.9"
varisat = "0.2"

[dev-dependencies]
proptest = "1"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
